style.css
@import url('https://fonts.googleapis.com/css2?family=Nabla&family=Press+Start+2P&family=Silkscreen:wght@400;700&family=Wallpoet&display=swap');



* {
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    background-color: #333;
    color: white;

}

.header {
    display: flex;
    justify-content: center;
}

.header h1 {
    font-family: 'Silkscreen', cursive;
    font-size: 34pt;

    color: #eee;

}

.scoreboard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Silkscreen';
}

.score {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.score .playerscore,
.score .computerscore {
    display: flex;
    flex-direction: row;
    margin: 2em;
}

.score .number {
    padding-left: 8px;
}

.content {
    display: flex;
    justify-content: space-around;

}

.playerselection h3 {
    font-family: 'Silkscreen';
}

.playerselection {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: 0rem solid white;
    border-radius: 2rem;
    box-shadow: 0 0 .2rem #fff,
        0 0 .2rem #fff,
        0 0 2rem #f09,
        0 0 0.8rem #f09,
        0 0 2.8rem #f09,
        inset 0 0 1.3rem #f09;
    flex-grow: 1;
    margin: 0 40px;
    padding: 20px;

}

.playerselection .playerchoice i {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #eeff00,
        0 0 82px #eeff00,
        0 0 92px #eeff00,
        0 0 102px #eeff00,
        0 0 151px #eeff00;
}

.playerselection .playerchoice i:hover {
    color: white;
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #49f76e,
        0 0 82px #49f76e,
        0 0 92px #49f76e,
        0 0 102px #49f76e,
        0 0 151px #49f76e;
}

.playerselection .playerchoice i {
    font-size: 5em;
    padding: .5em;
    cursor: pointer;

}

.playarea {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 3;
    border: 0rem solid white;
    border-radius: 2rem;
    box-shadow: 0 0 .2rem #fff,
        0 0 .2rem #fff,
        0 0 2rem #00a2ff,
        0 0 0.8rem #00a2ff,
        0 0 2.8rem #00a2ff,
        inset 0 0 1.3rem #00a2ff;

    margin: 0 40px;
    padding: 20px;

}

.roundcount {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-family: 'Silkscreen';
    font-size: 24pt;
    color: #eeff00
}

.middle {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    font-family: 'Silkscreen';
}

.playerchose i,
.computerchose i,
.computerwin,
.playerwin,
.nowinner {
    font-size: 20em;

}

.bottom {
    display: flex;
    justify-content: center;
    font-family: 'Silkscreen';
}

.loser {
    opacity: 0.3;
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #ff0000,
        0 0 82px #ff0000,
        0 0 92px #ff0000,
        0 0 102px #ff0000,
        0 0 151px #ff0000;
}

.winner {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #49f76e,
        0 0 82px #49f76e,
        0 0 92px #49f76e,
        0 0 102px #49f76e,
        0 0 151px #49f76e;
}

.tie {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #eeff00,
        0 0 82px #eeff00,
        0 0 92px #eeff00,
        0 0 102px #eeff00,
        0 0 151px #eeff00;
}



.computerwin {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #ff0000,
        0 0 82px #ff0000,
        0 0 92px #ff0000,
        0 0 102px #ff0000,
        0 0 151px #ff0000;
}

.playerwin {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #49f76e,
        0 0 82px #49f76e,
        0 0 92px #49f76e,
        0 0 102px #49f76e,
        0 0 151px #49f76e;
}

.nowinner {
    text-shadow:
        0 0 7px #fff,
        0 0 10px #fff,
        0 0 21px #fff,
        0 0 42px #eeff00,
        0 0 82px #eeff00,
        0 0 92px #eeff00,
        0 0 102px #eeff00,
        0 0 151px #eeff00;
}

.disabled {
    pointer-events: none;
    opacity: 0.3;

}
/* Large Devices, Wide Screens */
@media (max-width : 1200px) {
   
    
}
/* Medium Devices, Desktops */
@media (max-width : 992px) {
    body {
        background-color: blue;
    }
    .playerchose i,
    .computerchose i,
    .computerwin,
    .playerwin,
    .nowinner {
        font-size: 16em;

    }

}
/* Small Devices, Tablets */
@media (max-width : 768px) {
    body {
        background-color: green;
    }
    .header h1{
        font-size: 1.6em;
    }
    
    .playerchose i,
    .computerchose i,
    .computerwin,
    .playerwin,
    .nowinner {
        font-size: 14em;

    }
    .content{
        flex-direction:column;
        
    }
    .playerselection{
        flex-direction: row;
        margin-bottom: 2.5em;
        flex-wrap: wrap;
    }
    .playerselection .heading{
     flex: 0 1 100%;
    }
    .playerselection .playerchoice{
        flex: 1 0 33%;
    }
    .playerselection .playerchoice i{
        font-size: 4.5em;
    }
}

/* Extra Small Devices, Phones */
@media (max-width : 530px) {
    body {
        background-color: red;
    }
    .header h1{
        font-size: 1.4em;
    }
    .playerchose i,
    .computerchose i,
    .computerwin,
    .playerwin,
    .nowinner {
        font-size: 10em;

    }
    .playerselection .playerchoice i{
        font-size:3em;
    }
}

